--- a/styles/pit-bull-pitstop.css
+++ b/styles/pit-bull-pitstop.css
@@ -55,6 +55,28 @@ p {
   font-size: 24px;
 }
 
+.about-section {
+  padding: 180px 20px;
+}
+
+.about-hero-img {
+  border-radius: 10px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 85px;
+}
+
+.about-section h2 {
+  font-family: var(--default-font-family);
+  font-size: 18px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
 .btn-branding {
   font-size: 18px;
   color: white;
@@ -94,5 +116,14 @@ p {
   .stages-info {
     padding: 0;
     text-align: center;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-section img {
+    justify-content: center;
   }
 }
