--- a/styles/pit-bull-pitstop.css
+++ b/styles/pit-bull-pitstop.css
@@ -55,26 +55,37 @@ p {
   font-size: 24px;
 }
 
-.about-section {
+.content-container {
   padding: 180px 20px;
 }
 
-.about-hero-img {
+.content {
+  margin: 30px;
+}
+
+.content-hero-img {
   border-radius: 10px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 85px;
 }
 
-.about-section h2 {
+.content h2 {
   font-family: var(--default-font-family);
   font-size: 18px;
 }
 
-.about-section-content {
-  margin: 30px;
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
 }
 
 .btn-branding {
@@ -99,6 +110,26 @@ p {
   padding: 80px 50px;
 }
 
+.info-column {
+  background: var(--secondary-color);
+  padding: 10px;
+  border: 5px solid white;
+  border-radius: 15px;
+}
+
+.info-column h3 {
+  margin-bottom: 10px;
+}
+
+.info-column p {
+  margin-top: 15px;
+}
+
+.info-img {
+  display: block;
+  margin: 0 auto;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -118,12 +149,12 @@ p {
     text-align: center;
   }
 
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
 
-  .about-section img {
+  .content-hero img {
     justify-content: center;
   }
 }
