--- a/styles/pit-bull-pitstop.css
+++ b/styles/pit-bull-pitstop.css
@@ -35,6 +35,55 @@ p {
   line-height: 30px;
 }
 
+nav {
+  padding: 20px;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 40px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
+footer {
+  margin: 50px 0;
+  background: var(--branding-color);
+  padding: 30px 0;
+  position: bottom;
+}
+
+footer .help-links a {
+  margin: 0 20px;
+  padding: 10px 15px;
+  border-radius: 50%;
+  font-size: 18px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  transition: all 120ms ease-in-out;
+}
+
+footer .help-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -86,6 +135,15 @@ p {
 
 .content p {
   font-size: 14px;
+}
+
+.about-pit-link {
+  text-decoration: none;
+  color: var(--branding-color);
+}
+
+.about-pit-link:hover {
+  text-decoration: underline;
 }
 
 .btn-branding {
@@ -144,31 +202,8 @@ p {
   text-decoration: underline;
 }
 
-nav {
-  padding: 20px;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  display: inline;
-  list-style: none;
-  line-height: 40px;
-  margin-left: 15px;
-}
-
-nav a {
-  text-decoration: none;
-  color: #272142;
-  transition: all 100ms ease-in-out;
-}
-
-nav a:hover,
-nav li.active a {
-  color: var(--branding-color);
+.help-footer {
+  margin-top: 300px;
 }
 
 @media (max-width: 750px) {
